# hctvwrapper

./: AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: hackclub-tv.md  index.html
examples/: ai_bot.py  multi_channel.py  simple_bot.py
hctvwrapper/: __init__.py  bot.py  connection.py  context.py  models.py
