[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hctvwrapper"
version = "0.1.0"
description = "A Pycord-style Python wrapper for hackclub.tv"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Christian Well" },
]
keywords = ["hackclub", "hackclub.tv", "bot", "websocket", "chat", "wrapper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/christianwell/hctvwrapper"
Repository = "https://github.com/christianwell/hctvwrapper"
Issues = "https://github.com/christianwell/hctvwrapper/issues"
